# PollApp

./: .gitignore  pyproject.toml
firstSite/firstSite/: settings.py  urls.py
firstSite/polls/: admin.py  models.py  serializers.py  urls.py  views.py
firstSite/polls/migrations/: 0001_initial.py
firstSite/polls/templates/admin/: base_site.html
firstSite/polls/templates/polls/: detail.html  index.html
